right menu visibility fixed

--- a/static/css/pharma.css
+++ b/static/css/pharma.css
@@ -510,8 +510,4 @@ nav {
     #banner {
         display: none;
     }
-
-    #mobile_right_menu {
-        display: inherit;
-    }
 }
